[gd_scene load_steps=7 format=2]

[ext_resource path="res://Other/PanelWithCorners.tres" type="StyleBox" id=1]
[ext_resource path="res://Warning.png" type="Texture" id=2]
[ext_resource path="res://Elements/VaribleElement.gd" type="Script" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends TextureRect

func _physics_process(delta):
	rect_min_size.x = rect_size.y
"

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="GDScript" id=3]
script/source = "extends CheckBox

func _pressed():
	if pressed:
		text = \"True\"
	else:
		text = \"False\"
"

[node name="VaribleElement" type="MarginContainer"]
margin_right = 1025.0
margin_bottom = 48.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1015.0
margin_bottom = 38.0
custom_styles/panel = ExtResource( 1 )

[node name="Settings" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1015.0
margin_bottom = 38.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="Settings"]
margin_top = 4.0
margin_right = 38.0
margin_bottom = 24.0
text = "Name:"

[node name="VarName" type="Label" parent="Settings"]
margin_left = 48.0
margin_top = 4.0
margin_right = 401.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="Warning" type="TextureRect" parent="Settings"]
margin_left = 411.0
margin_right = 411.0
margin_bottom = 28.0
hint_tooltip = "Название пременной не должно быть пустым или уже существовать! (Также они не сохраняются)"
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = SubResource( 1 )

[node name="Label2" type="Label" parent="Settings"]
margin_left = 421.0
margin_top = 4.0
margin_right = 454.0
margin_bottom = 24.0
text = "Type:"

[node name="OptionButton" type="OptionButton" parent="Settings"]
margin_left = 464.0
margin_right = 521.0
margin_bottom = 28.0
text = "Bool"
items = [ "Bool", null, false, 0, null, "String", null, false, 1, null, "Integer", null, false, 2, null, "Signal", null, false, 3, null ]
selected = 0

[node name="Label3" type="Label" parent="Settings"]
margin_left = 531.0
margin_top = 4.0
margin_right = 612.0
margin_bottom = 24.0
text = "Initial value:"

[node name="TypeFileds" type="TabContainer" parent="Settings"]
margin_left = 622.0
margin_right = 976.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 2 )
tabs_visible = false

[node name="Bool" type="HBoxContainer" parent="Settings/TypeFileds"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 8

[node name="CheckButton" type="CheckBox" parent="Settings/TypeFileds/Bool"]
margin_right = 62.0
margin_bottom = 28.0
size_flags_horizontal = 2
text = "False"
script = SubResource( 3 )

[node name="String" type="HBoxContainer" parent="Settings/TypeFileds"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StringFiled" type="LineEdit" parent="Settings/TypeFileds/String"]
margin_right = 354.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
align = 1

[node name="Int" type="HBoxContainer" parent="Settings/TypeFileds"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IntFiled" type="SpinBox" parent="Settings/TypeFileds/Int"]
margin_right = 354.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
min_value = -9999.0
max_value = 9999.0
allow_greater = true
allow_lesser = true
align = 1

[node name="Empty" type="Label" parent="Settings/TypeFileds"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
text = "Unnecessary"
align = 1
valign = 1

[node name="DeleteBt" type="Button" parent="Settings"]
margin_left = 986.0
margin_right = 1005.0
margin_bottom = 28.0
text = "X"

[connection signal="item_selected" from="Settings/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="Settings/DeleteBt" to="." method="_on_DeleteBt_pressed"]
